@@ -1,3 +1,7 @@
+2005-10-20:
+	* src/shmcat.c: add.
+	* src/Makefile.am: update.
+
 2005-10-19:
 	* src/options.c: initialize options->debug correctly when it's
 	neither explicitly enabled nor disabled (patch from Greg Wettstein).
